@@ -16,6 +16,7 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.io.StringWriter;
 import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 
 import static com.powsybl.commons.test.ComparisonUtils.compareTxt;
@@ -29,7 +30,21 @@ class RunLoadFlowToolTest extends AbstractConverterTest {
     @Test
     void printLoadFlowResultTest() throws IOException {
         LoadFlowResult result = new LoadFlowResultImpl(true, Collections.emptyMap(), "",
-                Collections.singletonList(new LoadFlowResultImpl.ComponentResultImpl(0, 0, LoadFlowResult.ComponentResult.Status.CONVERGED, 8, "mySlack", 0.01, 300.45)));
+                List.of(
+                    new LoadFlowResultImpl.ComponentResultImpl(0, 0,
+                            LoadFlowResult.ComponentResult.Status.CONVERGED, "Success", Collections.emptyMap(), 8,
+                            "myRefBus", List.of(new LoadFlowResultImpl.SlackBusResultImpl("mySlack", 0.01)),
+                            300.45),
+                    new LoadFlowResultImpl.ComponentResultImpl(1, 1,
+                            LoadFlowResult.ComponentResult.Status.MAX_ITERATION_REACHED, "Newton-Raphson Iteration Limit",
+                            Collections.emptyMap(), 40,
+                            "myOtherRefBus", List.of(
+                                new LoadFlowResultImpl.SlackBusResultImpl("mySlack1", 12.34),
+                                new LoadFlowResultImpl.SlackBusResultImpl("mySlack2", 45.67)
+                            ),
+                            2678.22)
+                )
+        );
         try (StringWriter writer = new StringWriter()) {
             RunLoadFlowTool.printLoadFlowResult(result, writer, new AsciiTableFormatterFactory(), new TableFormatterConfig(Locale.US, "inv"));
             writer.flush();
